--- a/index.html
+++ b/index.html
@@ -6,9 +6,326 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
+
+    <!-- font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+
+    <style>
+        .font {
+            font-family: 'Lato', sans-serif;
+        }
+    </style>
+
 </head>
 
-<body>
+<body class="font">
+
+    <header>
+        <nav class="my-10 text-white hidden md:flex lg:flex justify-center">
+            <div class="navbar grid grid-cols-3 px-8 bg-[#F85559] rounded-full w-11/12">
+
+                <div class="dropdown dropdown-right lg:hidden text-black">
+                    <label tabindex="0" class="btn m-1">---
+                        <br> --- <br>---
+                    </label>
+                    <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
+                        <li><a>Home </a></li>
+                        <li><a>About us</a></li>
+                        <li><a>Shop</a></li>
+                        <li><a>All Fruits</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <ul class="hidden lg:flex justify-around gap-6  ">
+                        <li class="text-lg">Home</li>
+                        <li class="text-lg">About Us</li>
+                        <li class="text-lg">Shop</li>
+                        <li class="text-lg">All Fruits</li>
+
+
+                    </ul>
+                </div>
+
+                <div class="lg:ml-10">
+                    <img src="/images/logo.png" alt="">
+                    <h1 class=" md:text-3xl lg:text-4xl font-bold">Fruit Burst</h1>
+                </div>
+                <div class="hidden lg:flex form-control ml-20 w-9/12 ">
+                    <input type="text" placeholder="Search " class="lg:input input-bordered rounded-full p-2  w-full">
+
+                </div>
+
+            </div>
+        </nav>
+        <nav class="lg:hidden md:hidden">
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                    <img src="/images/logo.png" alt="">
+                    <h1 class=" md:text-3xl lg:text-4xl font-bold">Fruit Burst</h1>
+                </div>
+                <div class="navbar-end z-50">
+                    <div class="dropdown dropdown-left">
+                        <label tabindex="0" class="btn btn-ghost btn-circle">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h16M4 18h7" />
+                            </svg>
+                        </label>
+                        <ul tabindex="0" class="menu menu-sm dropdown-content  p-2 shadow bg-base-100 rounded-box w-52">
+                            <li><a>Home </a></li>
+                            <li><a>About us</a></li>
+                            <li><a>Shop</a></li>
+                            <li><a>All Fruits</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </nav>
+
+        <!-- banner -->
+        <div class="flex justify-center mb-24 ">
+
+            <div class="carousel  w-11/12">
+
+                <div id="slide1" class="carousel-item  relative  w-full">
+
+                    <img src="/images/banner1.png" class="w-full" />
+                    <div>
+
+                        <div
+                            class="  absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 backdrop-brightness-50 h-full  top-1/2">
+
+                            <a href="#slide4" class="btn btn-circle">❮</a>
+                            <div class="text-white text-center items-center  flex flex-col lg:space-y-5">
+                                <h1 class="text-xl md:text-4xl lg:text-7xl  font-bold">Exotic tastes at your <br>
+                                    doorstep
+                                </h1>
+                                <p>We supply highly quality organic products</p>
+                                <button class="btn  lg:w-1/2 bg-[#F85559] border-none text-white">Shop Now</button>
+
+                            </div>
+                            <a href="#slide2" class="btn btn-circle">❯</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div id="slide2" class="carousel-item relative w-full">
+                    <img src="/images/banner2.png" class="w-full" />
+                    <div
+                        class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 backdrop-brightness-50 h-full top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <div class="text-white text-center items-center  flex flex-col lg:space-y-5">
+                            <h1 class="text-xl md:text-4xl lg:text-7xl  font-bold">Exotic tastes at your <br> doorstep
+                            </h1>
+                            <p>We supply highly quality organic products</p>
+                            <button class="btn  lg:w-1/2 bg-[#F85559] border-none text-white">Shop Now</button>
+
+                        </div>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full">
+                    <img src="/images/banner3.png" class="w-full" />
+                    <div
+                        class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 backdrop-brightness-50 h-full top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <div class="text-white text-center items-center  flex flex-col lg:space-y-5">
+                            <h1 class="text-xl md:text-4xl lg:text-7xl  font-bold">Exotic tastes at your <br> doorstep
+                            </h1>
+                            <p>We supply highly quality organic products</p>
+                            <button class="btn  lg:w-1/2 bg-[#F85559] border-none text-white">Shop Now</button>
+
+                        </div>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide4" class="carousel-item relative w-full">
+                    <img src="/images/banner4.png" class="w-full" />
+                    <div
+                        class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 backdrop-brightness-50 h-full top-1/2">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <div class="text-white text-center items-center  flex flex-col lg:space-y-5">
+                            <h1 class="text-xl md:text-4xl lg:text-7xl  font-bold">Exotic tastes at your <br> doorstep
+                            </h1>
+                            <p>We supply highly quality organic products</p>
+                            <button class="btn  lg:w-1/2 bg-[#F85559] border-none text-white">Shop Now</button>
+
+                        </div>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+        <!-- banner bunus -->
+        <div class="  lg:-my-52 hidden md:flex lg:flex justify-center ">
+            <div class="flex z-0 justify-around bg-white shadow-xl rounded-lg p-8  w-9/12">
+                <div class="flex  flex-col items-center justify-center">
+                    <img src="/images/fruit1.png" alt="">
+                    <p>Strawberry</p>
+                </div>
+                <div class="flex flex-col items-center justify-center">
+                    <img src="/images/fruit2.png" alt="">
+                    <p>Orange</p>
+                </div>
+                <div class="flex flex-col items-center justify-center">
+                    <img src="/images/fruit3.png" alt="">
+                    <p>Mango</p>
+                </div>
+                <div class="flex flex-col items-center justify-center">
+                    <img src="/images/fruit4.png" alt="">
+                    <p>Straberry</p>
+                </div>
+                <div class="flex flex-col items-center justify-center">
+                    <img src="/images/fruit5.png" alt="">
+                    <p>Mango</p>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+    <main>
+
+        <section class=" md:my-20 lg:my-80 flex justify-center">
+            <div class="w-11/12">
+                <div class="flex flex-col md:flex-row lg:flex-row items-center justify-between gap-10">
+                    <div class="w-3/5 text-center   lg:text-left md:text-left space-y-6">
+                        <h1 class="text-3xl lg:text-4xl font-bold">Deal of the day</h1>
+                        <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical
+                            Latin literature from 45 BC, making it over 2000 years old.</p>
+                    </div>
+                    <div class="flex gap-4">
+                        <div class="flex flex-col">
+                            <h1 class="text-3xl font-bold">29</h1>
+                            <p>Days</p>
+
+                        </div>
+                        <h1 class="text-2xl">: </h1>
+                        <div class="flex flex-col">
+                            <h1 class="text-3xl font-bold">15</h1>
+                            <p>Hours</p>
+
+                        </div>
+                        <h1 class="text-3xl">: </h1>
+                        <div class="flex flex-col">
+                            <h1 class="text-2xl font-bold">25</h1>
+                            <p>Minutes</p>
+
+                        </div>
+                        <h1 class="text-3xl">: </h1>
+                        <div class="flex flex-col">
+                            <h1 class="text-2xl font-bold">15</h1>
+                            <p>Seconds</p>
+
+                        </div>
+
+                    </div>
+
+
+                </div>
+                <div class="grid   grid-cols-1  md:grid-cols-2 lg:grid-cols-4 my-20 gap-10">
+                    <div class="card border-2 bg-base-100 py-5  px-10 ">
+                        <figure class="px-10 pt-10 flex flex-col gap-5">
+                            <img src="/images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                            <h2 class="card-title mb-6">12.90$ - 18.85$</h2>
+                        </figure>
+                        <hr>
+                        <div class="card-body items-center text-center space-y-2">
+
+                            <p>Apples</p>
+                            <div>
+                                <i class="fa-solid fa-star text-[#F85559]"></i>
+                                <i class="fa-solid fa-star-half-stroke text-[#F85559]"></i>
+                                <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                            </div>
+                            <p class="text-[#FBC0A8]">Details</p>
+
+                        </div>
+                    </div>
+                    <div class="card border-2 bg-base-100 py-5  px-10 ">
+                        <figure class="px-10 pt-10 flex flex-col gap-5">
+                            <img src="/images/fruit7.png" alt="Shoes" class="rounded-xl" />
+                            <h2 class="card-title mb-6">12.90$ - 18.85$</h2>
+                        </figure>
+                        <hr>
+                        <div class="card-body items-center text-center space-y-2">
+
+                            <p>Orange</p>
+                            <div>
+                                <i class="fa-solid fa-star text-[#F85559]"></i>
+                                <i class="fa-solid fa-star-half-stroke text-[#F85559]"></i>
+                                <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                            </div>
+                            <p class="text-[#FBC0A8]">Details</p>
+
+                        </div>
+                    </div>
+                    <div class="card border-2  bg-base-100 py-5  px-10 ">
+                        <figure class="px-10 pt-10 flex flex-col gap-5">
+                            <img src="/images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                            <h2 class="card-title mb-6">12.90$ - 18.85$</h2>
+                        </figure>
+                        <hr>
+                        <div class="card-body items-center text-center space-y-2">
+
+                            <p>Red Dragon</p>
+                            <div>
+                                <i class="fa-solid fa-star text-[#F85559]"></i>
+                                <i class="fa-solid fa-star-half-stroke text-[#F85559]"></i>
+                                <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                            </div>
+                            <p class="text-[#FBC0A8]">Details</p>
+
+                        </div>
+                    </div>
+                    <div class="card border-2 bg-base-100 py-5  px-10 ">
+                        <figure class="px-10 pt-10 flex flex-col gap-5">
+                            <img src="/images/fruit9.png" alt="Shoes" class="rounded-xl" />
+                            <h2 class="card-title mb-6">12.90$ - 18.85$</h2>
+                        </figure>
+                        <hr>
+                        <div class="card-body items-center text-center space-y-2">
+
+                            <p>Banana</p>
+                            <div>
+                                <i class="fa-solid fa-star text-[#F85559]"></i>
+                                <i class="fa-solid fa-star-half-stroke text-[#F85559]"></i>
+                                <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                                <i class="fa-solid fa-star text-[#FBC0A8]"></i>
+                            </div>
+                            <p class="text-[#FBC0A8]">Details</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+
+    <footer>
+
+    </footer>
+
+
+
 
 
 
