--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                     <h1 class=" md:text-3xl lg:text-4xl font-bold">Fruit Burst</h1>
                 </div>
                 <div class="hidden lg:flex form-control ml-20 w-9/12 ">
-                    <input type="text" placeholder="Search " class="lg:input input-bordered rounded-full p-2  w-full">
+                    <input type="text" placeholder="Search " class="lg:input input-bordered rounded-full p-2  w-full"><i
+                        class="fa-solid fa-magnifying-glass text-black absolute right-36 my-4"></i>
 
                 </div>
 
@@ -108,7 +109,7 @@
                                     doorstep
                                 </h1>
                                 <p>We supply highly quality organic products</p>
-                                <button class="btn  lg:w-1/2 bg-[#F85559] border-none text-white">Shop Now</button>
+                                <button class="btn  lg:w-1/5 bg-[#F85559] border-none text-white">Shop Now</button>
 
                             </div>
                             <a href="#slide2" class="btn btn-circle">❯</a>
@@ -125,7 +126,7 @@
                             <h1 class="text-xl md:text-4xl lg:text-7xl  font-bold">Exotic tastes at your <br> doorstep
                             </h1>
                             <p>We supply highly quality organic products</p>
-                            <button class="btn  lg:w-1/2 bg-[#F85559] border-none text-white">Shop Now</button>
+                            <button class="btn  lg:w-1/5 bg-[#F85559] border-none text-white">Shop Now</button>
 
                         </div>
                         <a href="#slide3" class="btn btn-circle">❯</a>
@@ -140,7 +141,7 @@
                             <h1 class="text-xl md:text-4xl lg:text-7xl  font-bold">Exotic tastes at your <br> doorstep
                             </h1>
                             <p>We supply highly quality organic products</p>
-                            <button class="btn  lg:w-1/2 bg-[#F85559] border-none text-white">Shop Now</button>
+                            <button class="btn  lg:w-1/5 bg-[#F85559] border-none text-white">Shop Now</button>
 
                         </div>
                         <a href="#slide4" class="btn btn-circle">❯</a>
@@ -155,7 +156,7 @@
                             <h1 class="text-xl md:text-4xl lg:text-7xl  font-bold">Exotic tastes at your <br> doorstep
                             </h1>
                             <p>We supply highly quality organic products</p>
-                            <button class="btn  lg:w-1/2 bg-[#F85559] border-none text-white">Shop Now</button>
+                            <button class="btn  lg:w-1/5 bg-[#F85559] border-none text-white">Shop Now</button>
 
                         </div>
                         <a href="#slide1" class="btn btn-circle">❯</a>
@@ -209,7 +210,7 @@
                             <p>Days</p>
 
                         </div>
-                        <h1 class="text-2xl">: </h1>
+                        <h1 class="text-3xl">: </h1>
                         <div class="flex flex-col">
                             <h1 class="text-3xl font-bold">15</h1>
                             <p>Hours</p>
@@ -217,13 +218,13 @@
                         </div>
                         <h1 class="text-3xl">: </h1>
                         <div class="flex flex-col">
-                            <h1 class="text-2xl font-bold">25</h1>
+                            <h1 class="text-3xl font-bold">25</h1>
                             <p>Minutes</p>
 
                         </div>
                         <h1 class="text-3xl">: </h1>
                         <div class="flex flex-col">
-                            <h1 class="text-2xl font-bold">15</h1>
+                            <h1 class="text-3xl font-bold">08</h1>
                             <p>Seconds</p>
 
                         </div>
@@ -249,7 +250,7 @@
                                 <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                                 <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                             </div>
-                            <p class="text-[#FBC0A8]">Details</p>
+                            <p class="text-[#F85559]">Details</p>
 
                         </div>
                     </div>
@@ -269,7 +270,7 @@
                                 <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                                 <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                             </div>
-                            <p class="text-[#FBC0A8]">Details</p>
+                            <p class="text-[#F85559]">Details</p>
 
                         </div>
                     </div>
@@ -289,7 +290,7 @@
                                 <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                                 <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                             </div>
-                            <p class="text-[#FBC0A8]">Details</p>
+                            <p class="text-[#F85559]">Details</p>
 
                         </div>
                     </div>
@@ -309,10 +310,169 @@
                                 <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                                 <i class="fa-solid fa-star text-[#FBC0A8]"></i>
                             </div>
-                            <p class="text-[#FBC0A8]">Details</p>
+                            <p class="text-[#F85559]">Details</p>
 
                         </div>
                     </div>
+                </div>
+                <div class="flex justify-center"><button
+                        class=" btn  lg:w-1/5 bg-[#F85559] border-none text-white font-extrabold">Shop
+                        All</button></div>
+            </div>
+        </section>
+
+
+        <section class="flex justify-center my-20">
+            <div style="background-image: url(/images/team.png);" class="w-11/12 text-white  ">
+                <div class="backdrop-brightness-50 p-20 h-full flex flex-col justify-center space-y-10">
+                    <h1 class=" text-3xl md:text-4xl lg:text-5xl text-center font-bold">Meet the team section</h1>
+                    <p class="md:text-center lg:text-center mb-10 text-justify">Contrary to popular belief, is not
+                        simply random text.
+                        It
+                        has roots in
+                        a
+                        piece of
+                        classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+                    <div class="grid gap-10 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+                        <div class="flex flex-col items-center justify-center gap-4">
+                            <div><img cl src="/images/member1.png" alt=""></div>
+
+                            <h2 class="text-base">Awlad Hossain</h2>
+                            <p>Fruits experts</p>
+                            <div><i class="fa-brands text-[#F85559] fa-facebook"></i>
+                                <i class="fa-brands text-[#F85559] fa-twitter"></i>
+                                <i class="fa-brands text-[#F85559] fa-linkedin"></i>
+                            </div>
+
+                        </div>
+                        <div class="flex flex-col items-center justify-center gap-4">
+                            <div><img cl src="/images/member2.png" alt=""></div>
+
+                            <h2 class="text-base">Safia chowdhury</h2>
+                            <p>Fruits experts</p>
+                            <div><i class="fa-brands text-[#F85559] fa-facebook"></i>
+                                <i class="fa-brands text-[#F85559] fa-twitter"></i>
+                                <i class="fa-brands text-[#F85559] fa-linkedin"></i>
+                            </div>
+
+                        </div>
+                        <div class="flex flex-col items-center justify-center gap-4">
+                            <div><img cl src="/images/member3.png" alt=""></div>
+
+                            <h2 class="text-base">Rokibul Islam</h2>
+                            <p>Fruits experts</p>
+                            <div><i class="fa-brands text-[#F85559] fa-facebook"></i>
+                                <i class="fa-brands text-[#F85559] fa-twitter"></i>
+                                <i class="fa-brands text-[#F85559] fa-linkedin"></i>
+                            </div>
+
+                        </div>
+                        <div class="flex flex-col items-center justify-center gap-4">
+                            <div><img cl src="/images/member4.png" alt=""></div>
+
+                            <h2 class="text-base">Chaity</h2>
+                            <p>Fruits experts</p>
+                            <div><i class="fa-brands text-[#F85559] fa-facebook"></i>
+                                <i class="fa-brands text-[#F85559] fa-twitter"></i>
+                                <i class="fa-brands text-[#F85559] fa-linkedin"></i>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Why Choose Us Section  -->
+
+        <section class="flex flex-col items-center gap-10 justify-center">
+            <h1 class="text-5xl text-center">Why Choose Us</h1>
+            <p class="w-1/2 text-justify md:text-center lg:text-center">Contrary to popular belief, is not simply random
+                text. It has
+                roots in a piece
+                of classical
+                Latin
+                literature from 45 BC, making it over 2000 years old.</p>
+            <div class="lg:hidden md:hidden md:justify-center flex">
+                <img class="h-full" src="/images/whychoose1.png" alt="">
+            </div>
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-10 w-11/12">
+                <div class="grid  grid-rows-3 gap-10">
+                    <div class="flex flex-col md:flex-row lg:flex-row items-center gap-10">
+                        <div class="bg-[#121212] bg-opacity-10 rounded-full w-fit">
+                            <i class="fa-solid p-5 fa-user-group  text-3xl "></i>
+                        </div>
+                        <div class="space-y-2 text-center lg:text-left md:text-left">
+                            <h1 class="text-2xl font-bold">Dedicated Team</h1>
+                            <hr class="lg:w-1/2 md:w-1/2">
+                            <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                    <div class="flex  flex-col md:flex-row lg:flex-row items-center gap-10">
+                        <div class="bg-[#121212] bg-opacity-10 rounded-full w-fit">
+                            <i class="fa-regular p-5 fa-heart  text-3xl "></i>
+                        </div>
+                        <div class="space-y-2 text-center lg:text-left md:text-left">
+                            <h1 class="text-2xl font-bold">Fresh is Best</h1>
+                            <hr class="lg:w-1/2 md:w-1/2">
+                            <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col md:flex-row lg:flex-row items-center gap-10">
+                        <div class="bg-[#121212] bg-opacity-10 rounded-full w-fit">
+                            <i class="fa-solid p-5 fa-gift  text-3xl "></i>
+                        </div>
+                        <div class="space-y-2 text-center lg:text-left md:text-left">
+                            <h1 class="text-2xl font-bold">Gifts Certificates</h1>
+                            <hr class="lg:w-1/2 md:w-1/2">
+                            <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <div class="hidden md:flex md:justify-center lg:flex">
+                    <img class="h-full" src="/images/whychoose1.png" alt="">
+                </div>
+
+                <div class="grid grid-rows-3 gap-10">
+                    <div
+                        class="flex flex-col md:flex-row-reverse  lg:flex-row-reverse text-center lg:text-right md:text-right items-center gap-10">
+                        <div class="bg-[#121212] bg-opacity-10 rounded-full w-fit">
+                            <i class="fa-solid p-5 fa-truck-field  text-3xl "></i>
+                        </div>
+                        <div class="space-y-2">
+                            <h1 class="text-2xl font-bold">Integrated Supplier</h1>
+                            <hr class="lg:w-1/2 md:w-1/2  lg:ml-40 md:ml-40 font-extrabold">
+                            <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                    <div
+                        class="flex flex-col md:flex-row-reverse  lg:flex-row-reverse text-center lg:text-right md:text-right items-center gap-10">
+                        <div class="bg-[#121212] bg-opacity-10 rounded-full w-fit">
+                            <i class="fa-solid fa-ice-cream p-5 text-3xl"></i>
+                        </div>
+                        <div class="space-y-2">
+                            <h1 class="text-2xl font-bold">Sustainable Practice</h1>
+                            <hr class="lg:w-1/2 md:w-1/2  lg:ml-40 md:ml-40">
+                            <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                    <div
+                        class="flex flex-col md:flex-row-reverse  lg:flex-row-reverse text-center lg:text-right md:text-right items-center gap-10">
+                        <div class="bg-[#121212] bg-opacity-10 rounded-full w-fit">
+                            <i class="fa-regular fa-thumbs-up p-5 text-3xl"></i>
+                        </div>
+                        <div class="space-y-2">
+                            <h1 class="text-2xl font-bold">The Benefits Only</h1>
+                            <hr class="lg:w-1/2 md:w-1/2  lg:ml-40 md:ml-40">
+                            <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+
+
+
                 </div>
             </div>
         </section>
